--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Edit Category</h1>
-<%= render "form", category: @category %>
+<div class = "edit-category-container">
+    <h1>Edit Category</h1>
+    <%= render "form", category: @category %>
+</div>
