--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
+
 * {
-    font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 body {
@@ -9,49 +10,60 @@ body {
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    padding: 1rem;
-    background-color: #f8f8f8;
-    border-bottom: 1px solid #ddd;
-    height: 40px;
-  }
-  
-  .flash-container {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-  }
-  
-  .flash-message {
-    z-index: 1000;
-    background-color: #f8f8f8;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 12px;
-    color:red;
-  }
-  
-  .user-info {
-    margin-left: auto;
-    text-align: right;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 8px;
-  }
-  
-  .btn {
-    margin-left: 10px;
-    text-decoration: none;
-    color: white;
-    background-color: #007bff;
-    padding: 6px 12px;
-    border-radius: 4px;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 1rem;
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #ddd;
+  height: 40px;
+}
+
+.flash-container {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+
+.flash-message {
+  z-index: 1000;
+  background-color: #f8f8f8;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 12px;
+  color:red;
+}
+
+.user-info {
+  margin-left: auto;
+  text-align: right;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  gap: 8px;
+}
+
+.user-info h3 {
+  margin-top: 20px;
+}
+
+.btn {
+  margin-left: 10px;
+  text-decoration: none;
+  color: white;
+  background-color: gray;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 1rem;
+}
+
+.btn:hover {
+  background-color: rgb(81, 81, 81);
+}
+
