--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -6,6 +6,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "💾 Save Category", class: "btn"%>
   </div>
 <% end %>
+<%= link_to '⬅️ Back to Categories', categories_path, class: "btn" %>
