--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,17 +1,19 @@
-<h1>Categories</h1>
+<div class = "categories-title">
+  <h1>Categories💼</h1>
+  <%= link_to "📌View Available Tasks", tasks_path %>
+</div>
 
 <% @categories.each do |category| %>
-  <div>
-    <h2><%= link_to category.name, category %></h2>
-    <%= link_to "Edit Category", edit_category_path(category), class: "btn" %>
-    <%= link_to "Delete Category", category_path(category), data: {
-                        turbo_method: :delete,
-                        turbo_confirm: "Are you sure?"
-                      }, class: "btn" %>
+  <div class = "categories-container">
+    <h2>📁<%= link_to category.name, category %> (<%= category.tasks.count %>)</h2>
+    <% unless category.name == "Uncategorized" %>
+      <%= link_to "📝", edit_category_path(category), class: "edit-icon" %>
+      <%= link_to "⛔", category_path(category), data: {
+                          turbo_method: :delete,
+                          turbo_confirm: "Are you sure you want to delete this category?"},
+                          class: "delete-icon"  %>
+    <%end%>
   </div>
 <%end%>
 
-<br>
-<br>
-
-<%= link_to "Create Category", new_category_path %>
+<%= link_to "✍ Add New Category", new_category_path, class: "btn new-category" %>
