--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,20 +4,24 @@
     <%= form.label :description %>
     <%= form.text_field :description %>
   </div>
+  
+  <div class="field">
+    <%= form.label :due_date, "Due Date" %>
+    <%= form.date_field :due_date, min: Date.today, value: Date.today %>
+  </div>
 
-  <!-- <div class="field">
-    <%# <%= form.label :due_date %> %>
-    <%# <%= form.text_field :due_date %> %>
-  </div> -->
-
-   <div class="field">
-    <%= form.label :due_date, "Due Date" %><br>
-    <%= form.date_field :due_date, min: Date.today %>
+  <div class="field">
+    <%= form.label :category_id, "Select Category" %>
+    <%= form.collection_select :category_id, current_user.categories, 
+                               :id, :name, { selected: task.category_id, prompt: "Select a Category" }, 
+                               class: "category-dropdown" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
-     <%= link_to "Back", category_path(@task.category), class: "btn" %>
+    <%= form.submit "💾 Save Task", class: "btn"%>
   </div>
  
 <% end %>
+
+<%= link_to '⬅️ Back', request.referer || tasks_path, class: "btn" %>
+
