--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -11,5 +11,7 @@
       </div>
     <% end %>
   <%= render "form", category: @category %>
-  
+  <%= link_to categories_path, class: "btn" do %>
+    <i class="fa-solid fa-arrow-left"></i> &nbsp; Back
+  <%end%>
 </div>
