--- a/app/assets/stylesheets/categories_index.css
+++ b/app/assets/stylesheets/categories_index.css
@@ -13,7 +13,7 @@
 	color: black;
 	margin-top: -1rem;
 	margin-bottom: 1rem;
-
+	margin-left: .5rem;
 }
 
 .categories-title a:hover {
@@ -32,7 +32,8 @@
 }
 .categories-container a {
 	text-decoration: none;
-	color: black
+	color: black;
+	transition: all .3s ease-in-out;
 }
 
 .categories-container a:hover {
@@ -52,13 +53,14 @@
 
 .edit-icon a, .delete-icon a {
   text-decoration: none;
+  transition: all .3s ease-in-out;
 }
 .delete-icon:hover, .edit-icon:hover {
   transform: scale(1.1);
 }
 
 .new-category {
-  margin-left: 1rem;
+  margin-left: 1.5rem;
 }
 
 .today {
@@ -73,7 +75,8 @@
 
 .today a {
   text-decoration: none;
-  color: black
+  color: black;
+  transition: all .3s ease-in-out;
 }
 
 .today a:hover {
