--- a/app/assets/stylesheets/tasks_form.css
+++ b/app/assets/stylesheets/tasks_form.css
@@ -28,8 +28,8 @@
   }
   
   .task-form .actions .btn {
-    color: white;
-    background-color: gray;
+    color: whitesmoke;
+    background-color: black;
     padding: 6px 12px;
     border-radius: 4px;
     cursor: pointer;
@@ -37,6 +37,8 @@
     margin-top: 0;
     margin-left: 0;
     border: none;
+    text-decoration: none;
+    transition: all .3s ease-in-out;
   }
   .task-form .actions .btn:hover {
     background-color: rgb(81, 81, 81);
