--- a/app/assets/stylesheets/tasks_index.css
+++ b/app/assets/stylesheets/tasks_index.css
@@ -10,15 +10,32 @@
   margin-left: -1rem;
 }
 
-.today a {
+.today ul li a {
   text-decoration: none;
-  color: black
+  color: black;
+  transition: all .2s ease-in-out;
 }
 
-.today a:hover {
-	color: rgb(81, 81, 81);
+.today ul li a:hover {
+  text-decoration: underline hsl(0, 0%, 20%);
 }
 
 .today p {
     margin-left: 1rem;
+}
+
+.today .tasks-btn a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: whitesmoke;
+  background-color: black;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 1rem;
+}
+
+.today .tasks-btn a:hover {
+  background-color: hsl(0, 0%, 20%);
 }
