--- a/app/assets/stylesheets/tasks_show.css
+++ b/app/assets/stylesheets/tasks_show.css
@@ -1,6 +1,9 @@
 .task-show-container {
     margin-left: 1.5rem;
 }
+.task-show-title h1 i {
+    color: red;
+}
 
 .task-show-container h2{
     margin-left: 1rem;
@@ -25,5 +28,7 @@
 
 .task-show-actions a {
     text-decoration: none;
+    color: black;
+    transition: all .2s ease-in-out;
 }
 
