--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -6,7 +6,8 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "💾 Save Category", class: "btn"%>
+    <%= button_tag(type: "submit", class: "btn") do %>
+      <i class="fa-solid fa-floppy-disk"></i> &nbsp;Save Category
+    <% end %>
   </div>
 <% end %>
-<%= link_to '⬅️ Back to Categories', categories_path, class: "btn" %>
