--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,19 +1,27 @@
 <div class = "categories-title">
-  <h1>Categories💼</h1>
-  <%= link_to "📌View Available Tasks", tasks_path %>
+  <h1>Categories <i class="fa-solid fa-briefcase"></i></h1>
+  <%= link_to tasks_path do %>
+    <i class="fa-solid fa-list-check"></i> View All Tasks
+  <%end%>
 </div>
 
 <% @categories.each do |category| %>
   <div class = "categories-container">
-    <h2>📁<%= link_to category.name, category %> (<%= category.tasks.count %>)</h2>
+    <h2>
+      <i class="fa-solid fa-folder"></i> 
+      <%= link_to category.name, category %> (<%= category.tasks.count %>)
+    </h2>
+    
     <% unless category.name == "Uncategorized" %>
-      <%= link_to "📝", edit_category_path(category), class: "edit-icon" %>
-      <%= link_to "⛔", category_path(category), data: {
-                          turbo_method: :delete,
-                          turbo_confirm: "Are you sure you want to delete this category?"},
-                          class: "delete-icon"  %>
+      <%= link_to edit_category_path(category), class: "edit-icon" do %>
+        <i class="fa-solid fa-pen-to-square"></i>
+      <%end%>
     <%end%>
   </div>
 <%end%>
 
-<%= link_to "✍ Add New Category", new_category_path, class: "btn new-category" %>
+<%= link_to new_category_path, class: "btn new-category" do %>
+  <span>
+    <i class="fa-solid fa-folder-plus"></i> &nbsp;Add Category
+  </span>
+<%end%>
