--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,16 +1,22 @@
 <div class = "categories-show-container">
-  <h1><%= @category.name %>🗂️</h1>
+  <h1><%= @category.name %> <i class="fa-solid fa-folder-open"></i></h1>
   
   <div class = "tasks-title">
-    <h2>Tasks🗒️</h2>
+    <h2>Tasks <i class="fa-solid fa-list-check"></i></h2>
   </div>
 
   <% if @tasks.any? %>
     
       <% @tasks.each do |task| %>
         <div class = "task">
-          <p>📌<%= link_to task.description.titleize, category_task_path(@category, task) %></p> 
-          <p style = "font-weight: bold;">📆 <%= task.due_date.strftime("%B %d, %Y") %></p> 
+          <p>
+            <i class="fa-solid fa-thumbtack"></i>&nbsp;
+            <%= link_to task.description.titleize, category_task_path(@category, task) %>
+          </p> 
+          <p style = "font-weight: bold;">
+            <i class="fa-solid fa-calendar-days"></i>&nbsp; 
+            <%= task.due_date.strftime("%B %d, %Y") %>
+          </p> 
         </div>
       <% end %>
     
@@ -18,6 +24,10 @@
     <p>No tasks in this category yet.</p>
   <% end %>
 
-  <%= link_to '📋 Add New Task', new_category_task_path(@category), class: "btn" %>
-  <%= link_to '⬅️ Back to Categories', categories_path, class: "btn" %>
+  <%= link_to new_category_task_path(@category), class: "btn" do %>
+    <i class="fa-solid fa-clipboard-check"></i> &nbsp;Add New Task
+  <% end %>
+  <%= link_to categories_path, class: "btn" do%>
+    <i class="fa-solid fa-arrow-left"></i> &nbsp;Back to Categories
+  <%end%>
 </div>
