--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     <%= javascript_importmap_tags %>
 
     <%= stylesheet_link_tag "https://fonts.googleapis.com/css2?family=Lora&display=swap", media: "all" %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     
   </head>
 
@@ -38,7 +39,9 @@
     <% if user_signed_in? %>
       <div class="user-info">
         <h3>Welcome, <%= current_user.email %></h3>
-        <%= link_to "⏻Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn" %>
+        <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "btn" do %>
+          <i class="fa-solid fa-power-off"></i> &nbsp;Logout
+        <%end%>
       </div>
     <% end %>
   </div>
