--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -11,4 +11,7 @@
       </div>
     <% end %>
   <%= render "form", task: @task %>
+  <%= link_to session[:return_to] || tasks_path, class: "btn" do %>
+    <i class="fa-solid fa-arrow-left"></i> &nbsp; Back
+  <%end%>
 </div>
