--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -5,7 +5,7 @@
     <%= form.text_field :name %>
   </div>
 
-  <div class="actions">
+  <div class="actions" title = "Save Category">
     <%= button_tag(type: "submit", class: "btn") do %>
       <i class="fa-solid fa-floppy-disk"></i> &nbsp;Save Category
     <% end %>
