--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,14 +1,29 @@
-<div class = "edit-category-container">
-    <h1>Edit Category</h1>
-    <%= render "form", category: @category %>
-     <div class = "category-edit-actions">
+<div class="new-category-container">
+  <h1>Edit Category <i class="fa-solid fa-folder-open"></i></h1>
+  
+  <% if @category.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
+      <ul>
+        <% @category.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <%= render "form", category: @category %>
+
+  <div class="category-actions">
     <%= link_to categories_path, class: "btn" do %>
       <i class="fa-solid fa-arrow-left"></i> &nbsp; Back
-    <%end%>
-    <%= link_to category_path(@category), 
-			data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, 
-			class: "btn" do %>
-				<i class="fa-solid fa-trash"></i>&nbsp; Delete Category
-		<%end%>
-	</div>
+    <% end %>
+    
+    <%= link_to category_path(@category),
+      title: "Delete Category",
+      data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
+      class: "btn btn-delete" do %>
+      <i class="fa-solid fa-trash"></i> &nbsp; Delete Category
+    <% end %>
+  </div>
 </div>
