--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,7 +5,7 @@
 			<%= @task.description %>
 		</h1> 
 		<div class = "task-show-actions"> 
-			<%= link_to edit_category_task_path(@task.category, @task), class: "edit-btn" do %>
+			<%= link_to edit_category_task_path(@task.category, @task), title: "Edit Task", class: "edit-btn" do %>
 				<i class="fa-solid fa-pen-to-square"></i>
 			<%end%>
 		</div>
